--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -228,7 +228,9 @@
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
 
-      <a href="/home">Home</a>
+      <a href="/home">Home</a> <br>
+
+      <a [routerLink]="['/life-cycle']">Life Cycle</a>
     </div>
 
   </div>
